fix checkout bug

--- a/hotel-base/pom.xml
+++ b/hotel-base/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hotel-base</artifactId>
+<!--    这里如果打pom包会找不到，只能打jar包-->
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -48,6 +50,26 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+<!--                打jar包的时候需要一个启动类，这个模块没有启动类所以要把skip设置为false，skip=false表示使用springboot maven插件的
+                    repackage 目标负责将项目打包成一个可执行的 JAR 文件，并在 JAR 文件的清单属性中设置主类。-->
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
