--- a/hotel-core/pom.xml
+++ b/hotel-core/pom.xml
@@ -20,6 +20,8 @@
         <jwt-version>0.9.1</jwt-version>
         <lombok-version>1.18.4</lombok-version>
         <log4j-version>2.20.0</log4j-version>
+
+        <skipTests>true</skipTests>
     </properties>
 
     <dependencies>
@@ -98,8 +100,21 @@
             <groupId>com.gzx.hotel</groupId>
             <artifactId>hotel-base</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+<!--            <scope>system</scope>-->
+<!--            <systemPath>E:/Java/apache-maven-3.8.7/local-repo/com/gzx/hotel/hotel-base/1.0-SNAPSHOT</systemPath>-->
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.gzx.hotel.core.Application</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
